styles/edit_robots.css
/* ... */
#edit #console .event label.original_player_dr-cossack span.current_player_dr-light,
#edit #console .event label.original_player_dr-cossack span.current_player_dr-wily,
#edit #console .event label.original_player_dr-cossack span.current_player_dr-cossack {
    color: rgb(190, 141, 223) !important;
}


#edit #console .event .event_robot_mugshot,
#edit #console .event .event_robot_images,
#edit #console .event .event_robot_favourite,
#edit #console .event .event_robot_core,
#edit #console .event .event_robot_core2,
#edit #console .event .event_robot_summons {

}
#edit #console .event .event_robot_mugshot {
    height: 40px;
}
#edit #console .event .event_robot_core {
    margin-top: 46px;
    height: 14px;
    z-index: 100;
    overflow: hidden;
}
#edit #console .event .event_robot_core2 {
    margin-top: 68px;
    height: 12px;
    z-index: 95;
    overflow: hidden;
}

#edit #console .event .event_robot_images {
    margin-top: 48px;
    height: 48px;
    z-index: 90;
}
#edit #console .event .event_robot_summons {
    margin-top: 104px;
    height: 21px;
    text-align: center;
    line-height: 10px;
    z-index: 80;
}
#edit #console .event .event_robot_summons .summons_count {
    font-size: 11px;
    font-weight: bold;
    line-height: 12px;
    color: #DEDEDE;
}
#edit #console .event .event_robot_summons .summons_label {
    font-size: 8px;
    line-height: 8px;
    color: #CECECE;
}
#edit #console .event .event_robot_favourite {
    margin-top: 133px;
    height: 14px;
    z-index: 70;
}


#edit #console .event_has_subcore .event_robot_images {
    margin-top: 88px;
}
#edit #console .event_has_subcore .event_robot_summons {
    margin-top: 144px;
}
#edit #console .event_has_subcore .event_robot_favourite {
    margin-top: 173px;
}

#edit #console .event .event_robot_mugshot .sprite_wrapper,
#edit #console .event .event_robot_images .sprite_wrapper,
#edit #console .event .event_robot_favourite .sprite_wrapper,
#edit #console .event .event_robot_core .sprite_wrapper,
#edit #console .event .event_robot_core2 .sprite_wrapper {
    margin: 0;
    width: 40px;
    height: 40px;
    position: relative;
    display: block;
}
#edit #console .event .event_robot_mugshot .sprite_wrapper .sprite,
#edit #console .event .event_robot_images .sprite_wrapper .sprite {
    margin: 0;
    position: absolute;
}


#edit #console .event .event_robot_images span.robot_image_alts {
    cursor: default;
    display: block;
}
#edit #console .event .event_robot_images a.robot_image_alts {
    cursor: pointer;
    display: block;
}

#edit #console .event .event_robot_images .sprite_wrapper .token {
    position: absolute;
    bottom: -12px;
    left: 2px;
    color: #606060;
    font-size: 14px;
    line-height: 14px;
    height: 14px;
    width: 14px;
}
#edit #console .event .event_robot_images .sprite_wrapper .token_enabled {
    color: #606060;
}
#edit #console .event .event_robot_images .sprite_wrapper .token_disabled {
    color: #202020;
}
#edit #console .event .event_robot_images .sprite_wrapper .token_active {
    color: #B0B0B0;
}

#edit #console .event .event_robot_core .robot_core,
#edit #console .event .event_robot_core2 .robot_core2 {
    display: block;
    font-size: 20px;
    line-height: 20px;
    margin: -11px auto 0;
    text-align: center;
    text-decoration: none;
    color: #2A2A2A;
    background-color: transparent !important;
    border-color: transparent !important;
    background-position: center top;
    padding: 0;
}
#edit #console .event .event_robot_core a.robot_core,
#edit #console .event .event_robot_core2 .robot_core2 {
    cursor: pointer;
}
#edit #console .event .event_robot_core2 .robot_core2 .sprite {
    background-position: center 4px;
    background-size: 70%;
}

#edit #console .event .robot_favourite {
    display: block;
    font-size: 20px;
    line-height: 20px;
    margin: -2px auto 0;
    text-align: center;
    cursor: pointer;
    text-decoration: none;
    color: #2A2A2A;
}
#edit #console .event .robot_favourite:hover,
#edit #console .event .robot_favourite_active {
    color: #DEDEDE;
}
#edit #console .event span.robot_favourite,
#edit #console .event span.robot_favourite:hover {
    cursor: default;
    color: #2A2A2A;
}
#edit #console .event span.robot_favourite_active,
#edit #console .event span.robot_favourite_active:hover {
    color: #DEDEDE;
}



#edit #console .event a.player_name,
#edit #console .event a.item_name {
    display: block;
    float: right;
    padding: 1px 0;
    margin: 2px 0 0;
    width: 155px;
    text-align: center;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    height: 13px;
    cursor: pointer;
    _cursor: hand;
}
#edit #console .event a.item_name {

}
#edit #console .event a.player_name:hover,
#edit #console .event a.item_name:hover {
    background-color: #515151;
}
#edit #console .event a.player_name label,
#edit #console .event a.item_name label {
    display: block;
    margin: 0;
    padding-left: 16px;
    padding-right: 16px;
    width: auto;
    text-align: center;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    height: 13px;
    cursor: pointer;
    _cursor: hand;
    pointer-events:none;
    background-image: none;
    background-repeat: no-repeat;
    background-position: 0 -3px;
    background-size: 17px 17px;
    position: relative;
    bottom: -1px;
}
#edit #console .event a.item_name label {

}
/* ... */

